Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
None
-
None
Description
It is allowed to set hyphens in groups of 2 digits or ommit them, so there are max 15 hyphens in the uuid.
But it is also allowed to set them in a row - and it does not make much sense and is not very clear when 15 of them are accepted, while 16 is not - it is confusing.
create table t1 (a uuid);
|
|
|
MariaDB [test]> INSERT INTO t1 VALUES ('5796dac11a1c11--------------ecab4ef859-713e4be4');
|
Query OK, 1 row affected (0.026 sec)
|
|
|
MariaDB [test]> INSERT INTO t1 VALUES ('5796dac11a1c11---------------ecab4ef859-713e4be4');
|
ERROR 1292 (22007): Incorrect uuid value: '5796dac11a1c11---------------ecab4ef859-713e4be4' for column `test`.`t1`.`a` at row 1
|
Attachments
Issue Links
- is caused by
-
MDEV-4958 Adding datatype UUID
-
- Closed
-