MDEV-26785 Hyphens inside the value of uuid datatype